// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker demo -- disabled 1`] = `
.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-14 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  box-shadow: none;
  cursor: default;
}

.emotion-14,
.emotion-14 input,
.emotion-14 .emotion-3 {
  padding: 0 4px;
}

.emotion-14:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-14,
.emotion-14:hover {
  color: #cccccc;
  -webkit-text-fill-color: #cccccc;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-14 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-14 input,
.emotion-14 input:hover,
.emotion-14 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-14 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-ms-clear {
  display: none;
}

.emotion-14 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-14 .emotion-3:empty {
  display: none;
}

.emotion-14 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-14 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
  box-shadow: none;
  cursor: default;
}

.emotion-14,
.emotion-14 input,
.emotion-14 .emotion-3 {
  padding: 0 4px;
}

.emotion-14:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-14,
.emotion-14:hover {
  color: #cccccc;
  -webkit-text-fill-color: #cccccc;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-14 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-14 input,
.emotion-14 input:hover,
.emotion-14 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-14 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-ms-clear {
  display: none;
}

.emotion-14 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-14 .emotion-3:empty {
  display: none;
}

.emotion-14 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input uc-fe-input-disabled emotion-4 emotion-14 emotion-6"
        disabled=""
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          disabled=""
          value=""
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`TimePicker demo -- format 1`] = `
.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`TimePicker demo -- nullable 1`] = `
.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`TimePicker demo -- size 1`] = `
.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-14 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-14,
.emotion-14 input,
.emotion-14 .emotion-3 {
  padding: 0 4px;
}

.emotion-14:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-14 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-14 input,
.emotion-14 input:hover,
.emotion-14 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-14 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-ms-clear {
  display: none;
}

.emotion-14 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-14 .emotion-3:empty {
  display: none;
}

.emotion-14 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-23 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-23,
.emotion-23 input,
.emotion-23 .emotion-3 {
  padding: 0 4px;
}

.emotion-23:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-23 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-23 input,
.emotion-23 input:hover,
.emotion-23 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-23 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input::-ms-clear {
  display: none;
}

.emotion-23 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-23 .emotion-3:empty {
  display: none;
}

.emotion-23 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-14 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-14,
.emotion-14 input,
.emotion-14 .emotion-3 {
  padding: 0 4px;
}

.emotion-14:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-14 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-14 input,
.emotion-14 input:hover,
.emotion-14 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-14 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-14 input::-ms-clear {
  display: none;
}

.emotion-14 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-14 .emotion-3:empty {
  display: none;
}

.emotion-14 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-23 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-23,
.emotion-23 input,
.emotion-23 .emotion-3 {
  padding: 0 4px;
}

.emotion-23:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-23 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-23 input,
.emotion-23 input:hover,
.emotion-23 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-23 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-23 input::-ms-clear {
  display: none;
}

.emotion-23 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-23 .emotion-3:empty {
  display: none;
}

.emotion-23 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-14 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-23 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`TimePicker demo -- timePicker 1`] = `
Array [
  .emotion-67 {
  font-size: 12px;
}

.emotion-67 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-67 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-16 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-16,
.emotion-16 input,
.emotion-16 .e1bl81de0 {
  padding: 0 4px;
}

.emotion-16:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-16 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-16 input,
.emotion-16 input:hover,
.emotion-16 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-16 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-ms-clear {
  display: none;
}

.emotion-16 .e1bl81de0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-16 .e1bl81de0:empty {
  display: none;
}

.emotion-16 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-16:hover .uc-fe-input-clear,
.emotion-16.uc-fe-input-focused .uc-fe-input-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-58 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-58 .uc-fe-radio-styletype-default,
.emotion-58 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-58 .uc-fe-radio-styletype-default:last-child,
.emotion-58 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-58 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-58 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-58 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-58 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-58 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-58 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-58 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-44 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-44 > * {
  font-size: 12px;
}

.emotion-44 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-44.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-44:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-42.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-42 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-40 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-50 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-50 > * {
  font-size: 12px;
}

.emotion-50 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-50.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-48.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-48 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-48.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-48 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-67 {
  font-size: 12px;
}

.emotion-67 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-67 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-16 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-16,
.emotion-16 input,
.emotion-16 .e1bl81de0 {
  padding: 0 4px;
}

.emotion-16:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-16 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-16 input,
.emotion-16 input:hover,
.emotion-16 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-16 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-ms-clear {
  display: none;
}

.emotion-16 .e1bl81de0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-16 .e1bl81de0:empty {
  display: none;
}

.emotion-16 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-16:hover .uc-fe-input-clear,
.emotion-16.uc-fe-input-focused .uc-fe-input-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-58 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-58 .uc-fe-radio-styletype-default,
.emotion-58 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-58 .uc-fe-radio-styletype-default:last-child,
.emotion-58 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-58 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-58 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-58 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-58 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-58 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-58 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-58 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-44 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-44 > * {
  font-size: 12px;
}

.emotion-44 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-44.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-44:hover .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-42.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-42 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-40 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-50 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-50 > * {
  font-size: 12px;
}

.emotion-50 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-50.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-48.uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-48 .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-48.uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-48 .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

<form
    class="uc-fe-form demo-form emotion-67 emotion-90"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        nullable
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        format
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-15 emotion-16 emotion-17"
        >
          <input
            value="HH:mm:ss"
          />
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-58 emotion-59"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-44 emotion-45"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-42 emotion-43"
            >
              <svg
                class="uc-fe-radio-icon emotion-40 emotion-41"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-50 emotion-45"
          >
            <span
              checked=""
              class="uc-fe-radio-icon-wrap emotion-48 emotion-43"
            >
              <svg
                class="uc-fe-radio-icon emotion-40 emotion-41"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-44 emotion-45"
          >
            <span
              class="uc-fe-radio-icon-wrap emotion-42 emotion-43"
            >
              <svg
                class="uc-fe-radio-icon emotion-40 emotion-41"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>,
  .emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-7 {
  display: inline-block;
  width: 140px;
}

.emotion-5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  max-width: 100%;
  font-size: 12px;
  border-radius: 2px;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  transition: 0.18s cubic-bezier(0.4,0,0.2,1);
  vertical-align: middle;
}

.emotion-5,
.emotion-5 input,
.emotion-5 .emotion-3 {
  padding: 0 4px;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #f6f6fb;
}

.emotion-5 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-ms-clear {
  display: none;
}

.emotion-5 .emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-5 .emotion-3:empty {
  display: none;
}

.emotion-5 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #7a8baa;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

<div
    class="demo-wrap"
  >
    <div
      class="uc-fe-timepicker emotion-7 emotion-8"
    >
      <span
        class="uc-fe-input emotion-4 emotion-5 emotion-6"
      >
        <span
          class="uc-fe-input-prefix emotion-2 emotion-3"
        >
          <svg
            class=" emotion-0 emotion-1"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2.00000001 C17.5228474,2.00000001 22,6.4771525 22,12 C22,17.5228474 17.5228474,22 12,22 C6.4771525,22 2.00000001,17.5228474 2.00000001,12 C2.00000001,6.4771525 6.4771525,2.00000001 12,2.00000001 Z M12,3.99999999 C7.58172201,3.99999999 3.99999999,7.58172201 3.99999999,12 C3.99999999,16.418278 7.58172201,20 12,20 C16.418278,20 20,16.418278 20,12 C20,7.58172201 16.418278,3.99999999 12,3.99999999 Z M12,5.00000001 C12.5522847,5.00000001 13,5.44771526 13,6.00000001 L12.9988571,11.564 L16.4331669,14.6049863 C16.8222873,14.9493998 16.8585295,15.5440465 16.514116,15.9331669 C16.5014615,15.9474641 16.4883746,15.9613728 16.4748737,15.9748737 C16.0775779,16.3721696 15.4396827,16.3915906 15.0189533,16.0191999 L11.3346,12.7581506 C11.2048932,12.6433461 11.1143951,12.5007379 11.0641345,12.347206 L11.0509807,12.3160773 C11.0179086,12.2167311 11,12.1104569 11,12 L11,6.00000001 C11,5.44771526 11.4477153,5.00000001 12,5.00000001 Z"
            />
          </svg>
        </span>
        <input
          value=""
        />
      </span>
    </div>
  </div>,
]
`;
